0.185

- Fix a bug introduced in 0.184 causing Enum's fromString(String) method to be
  ignored.
- When a class defines fromString(String) method, valueOf(String) method or
  a String-parameterized constructor, attempt the conversion using only first
  available conversion method.
- Add TDigest and DecayTDigest data structures.

0.184

- Match enums case-insensitively in configuration.
- Access logging levels finer than FINE.
- Record complete URI in HTTP request log.
- Handle exceptions from @PreDestroy methods.
- Remove checked exceptions from LifeCycleManager methods.
- Remove checked exceptions from Bootstrap.initialize().
- Fix @JsonSubTypes support for JsonCodec.
- Allow using localhost for SPNEGO canonical service name in HTTP client.
- Add support for printing Optional values in configuration.
- Use "----" for printing null values in configuration.
- Remove ConfigurationUtils testing utility.

0.183

- Fix rare failure when deserializing QuantileDigest instances.

0.182

- Retry SpnegoAuthentication on network related exceptions.
- Allow adding fractional weights to QuantileDigest.
- Show JVM config hint when JMX agent start fails on Java 9+.
- Skip starting JMX agent on Java 9+ if already configured.

0.181

- Fix JAX-RS warning for missing JAXB APIs on Java 9.
- Remove support for non-explicit JAX-RS bindings.
- Add config for HTTP server max response header size.

0.180

- Run life cycle methods on instances from providers.
- Log HTTP server requests even when body is not read.
- Hide HTTP Client's key/trust store passwords from logs.
- Add installModuleIf method to ConditionalModule with ability to
  install module when condition is not met.
- Allow configuring Kerberos GSS name type for HTTP client.
- Exclude tar.gz files from server tarballs.

0.179

- Update to BVal 2.0.0
- Report server port when bind fails in HttpServer.
- Redirect from /resource to /resource/.
- Add future callback overloads that take an executor.